forkMeOnGitHub.css
@charset "UTF-8";

/* 
*   Author: lamborshea
*   GitHub: www.github.com/lamborshea
*   License: none
*/

@media screen and (max-width:767px) {
    #forkMeOnGitHub {
        display: none;
    }
}

@media screen and (min-width:768px) {
    #forkMeOnGitHub {
        display: block;
        height: 300px;
        width: 300px;
        position: absolute;
        top: 0;
        right: 0;
    }
    
    #forkMeOnGitHub > a{
        display: inline-block;
        width: 200px;
        font: 400 16px/1.5 menlo,Verdana,Helvetica,"Helvetica Neue",sans-serif;
        color: #eee;
        background-color: #121621;
        text-decoration: none;
        text-align:center;
        position:relative;
        padding: 5px 50px;
        transform: rotate(45deg);
        -moz-transform: rotate(45deg) ;
        -webkit-transform: rotate(45deg) ;
        -o-transform: rotate(45deg) ;
        -ms-transform: rotate(45deg) ;
        top: 50px;
        right:-82px;
    }

    #forkMeOnGitHub a::before,
    #forkMeOnGitHub a::after {
        content: "";
        width: 100%;
        display: block;
        position: absolute;
        height:1px;
        background:#999;
    }
    #forkMeOnGitHub a::before {
        top:1px;
        left:0;
    }
    #forkMeOnGitHub a::after { 
        bottom:1px;
        right: 0;
    }
}

